--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: test-repo
+  name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 
 # This line should *not* be indented
