--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,12 +7,13 @@ publish_mode: editorial_workflow
 
 # These lines should *not* be indented
 media_folder: "public/images/uploads" # Media files will be stored in the repo under static/images/uploads
-#public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "public/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "project" # Used in routes, e.g., /admin/collections/blog
     label: "Project" # Used in the UI
-    folder: "_posts/projects" # The path to the folder where the documents are stored
+    folder: "public/posts/projects" # The path to the folder where the documents are stored
+    extension: "json"
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -25,7 +26,8 @@ collections:
       - {label: "Tags", name: "tags", widget: "list", default: "development"}
   - name: "introduction"
     label: "Introduction"
-    folder: "_posts/about"
+    folder: "public/posts/about"
+    extension: "json"
     create: true
     slug: "about"
     fields:
@@ -35,7 +37,7 @@ collections:
 
   - name: "header banner"
     label: "Header Banner"
-    folder: "_posts"
+    folder: "public/posts"
     create: true
     slug: "header-banner"
     fields: 
